--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,8 +46,8 @@ find_package(Doxygen)
 
 ### Boost
 set(Boost_VERBOSE ON)
-find_package(Boost REQUIRED COMPONENTS program_options filesystem HINTS ${DEAL_II_BOOST_DIR})
-include_directories( ${DEAL_II_BOOST_INCLUDE_DIRS} )
+find_package(Boost REQUIRED COMPONENTS log log_setup program_options filesystem HINTS ${DEAL_II_BOOST_DIR})
+#include_directories( ${DEAL_II_BOOST_INCLUDE_DIRS} )
 
 include(GetGitRevisionDescription)
 get_git_head_revision(GIT_REFSPEC GIT_SHA1)
@@ -94,17 +94,12 @@ endif()
 
 add_subdirectory( source/lib )
 add_subdirectory( source/case_gen )
-add_subdirectory( source/groundstates )
-##ADD_SUBDIRECTORY( source/realtime )
-##ADD_SUBDIRECTORY( source/oct )
-##ADD_SUBDIRECTORY( source/utils )
-##ADD_SUBDIRECTORY( source/stationary )
-#ADD_SUBDIRECTORY( source/resonances )
-#ADD_SUBDIRECTORY( source/trash )
-#ADD_SUBDIRECTORY( source/belen )
-##ADD_SUBDIRECTORY( source/edu )
-#ADD_SUBDIRECTORY( source/cont )
-
+add_subdirectory( source/stationary )
+#add_subdirectory( source/groundstates )
+#add_subdirectory( source/realtime )
+#add_subdirectory( source/oct )
+#add_subdirectory( source/utils )
+#add_subdirectory( source/edu )
 
 if(BUILD_DOCUMENTATION)
 if(NOT DOXYGEN_FOUND)
