--- a/source/lib/CMakeLists.txt
+++ b/source/lib/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 set(TARGET myatus )
 
-ADD_LIBRARY( ${TARGET} MyParameterHandler.cpp MyTable.cpp mmio.c )
-TARGET_LINK_LIBRARIES( ${TARGET} m gomp Boost::headers)
+ADD_LIBRARY( ${TARGET} MyParameterHandler.cpp MyRealTools.cpp MyComplexTools.cpp MyLogging.cpp mmio.c )
+TARGET_LINK_LIBRARIES( ${TARGET} m gomp Boost::headers Boost::log Boost::log_setup)
 
