--- a/source/lib/CMakeLists.txt
+++ b/source/lib/CMakeLists.txt
@@ -1,6 +1,16 @@
 
 set(TARGET myatus )
 
-ADD_LIBRARY( ${TARGET} MyParameterHandler.cpp MyRealTools.cpp MyComplexTools.cpp MyLogging.cpp mmio.c )
+add_library( ${TARGET} 
+  UtilsRealWavefunction.hpp
+  UtilsRealWavefunction.cpp
+  GPUtilsRealWavefunction.hpp
+  GPUtilsRealWavefunction.cpp  
+  MyParameterHandler.cpp 
+  MyComplexTools.cpp 
+  MyLogging.cpp 
+  mmio.c 
+)
+
 TARGET_LINK_LIBRARIES( ${TARGET} m gomp Boost::headers Boost::log Boost::log_setup)
 
