--- a/source/stationary/orthomin_newton/CMakeLists.txt
+++ b/source/stationary/orthomin_newton/CMakeLists.txt
@@ -1,18 +1,18 @@
 ###################################################################################################
-set(TARGET orthomin_newton )
+# set(TARGET orthomin_newton )
 
-add_executable(${TARGET}
-  ${TARGET}_main.cpp 
-  ${TARGET}.hpp 
-  ${TARGET}.cpp 
-)
+# add_executable(${TARGET}
+#   ${TARGET}_main.cpp 
+#   ${TARGET}.hpp 
+#   ${TARGET}.cpp 
+# )
 
-DEAL_II_SETUP_TARGET( ${TARGET} )
+# DEAL_II_SETUP_TARGET( ${TARGET} )
 
-target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/include )
-target_link_libraries(${TARGET} myatus NLopt::nlopt)
+# target_include_directories(${TARGET} PRIVATE ${CMAKE_SOURCE_DIR}/include )
+# target_link_libraries(${TARGET} myatus NLopt::nlopt)
 
-unset(${TARGET})
+# unset(${TARGET})
 
 ###################################################################################################
 set(TARGET orthomin_newton_mpi )
